--- a/Taijitan/src/gui/Login.fxml
+++ b/Taijitan/src/gui/Login.fxml
@@ -3,20 +3,33 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="GridPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="30.0" prefHeight="138.79999389648438" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="225.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="151.0" fitWidth="151.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
          <image>
             <Image url="@../assets/img/logo.png" />
          </image>
       </ImageView>
-      <JFXPasswordField alignment="CENTER" focusColor="#336566" layoutX="232.0" layoutY="245.0" promptText="Wachtwoord" />
-      <JFXTextField alignment="CENTER" focusColor="#336566" layoutX="232.0" layoutY="200.0" promptText="E-mailadres" />
-      <JFXButton buttonType="RAISED" layoutX="243.0" layoutY="301.0" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #336566;" text="Inloggen" textFill="WHITE" />
+      <JFXPasswordField fx:id="txtEmail" alignment="CENTER" focusColor="#336566" promptText="E-mailadres" unFocusColor="#bfbfbf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <JFXTextField fx:id="txtPassword" alignment="CENTER" focusColor="#336566" promptText="Wachtwoord" unFocusColor="#bfbfbf" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+      <JFXButton fx:id="btnLogin" buttonType="RAISED" maxWidth="1.7976931348623157E308" onAction="#login" style="-fx-background-color: #336566;" text="Inloggen" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
    </children>
-</AnchorPane>
+</fx:root>
