--- a/Taijitan/src/gui/Login.fxml
+++ b/Taijitan/src/gui/Login.fxml
@@ -3,33 +3,20 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="GridPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="30.0" prefHeight="138.79999389648438" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="151.0" fitWidth="151.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+      <ImageView fitHeight="136.0" fitWidth="134.0" layoutX="233.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/img/logo.png" />
          </image>
       </ImageView>
-      <JFXPasswordField fx:id="txtEmail" alignment="CENTER" focusColor="#336566" promptText="E-mailadres" unFocusColor="#bfbfbf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <JFXTextField fx:id="txtPassword" alignment="CENTER" focusColor="#336566" promptText="Wachtwoord" unFocusColor="#bfbfbf" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-      <JFXButton fx:id="btnLogin" buttonType="RAISED" maxWidth="1.7976931348623157E308" onAction="#login" style="-fx-background-color: #336566;" text="Inloggen" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+      <JFXPasswordField alignment="CENTER" focusColor="#336566" layoutX="200.0" layoutY="185.0" prefHeight="30.0" prefWidth="200.0" promptText="E-mailadres" unFocusColor="#848484" />
+      <JFXTextField alignment="CENTER" focusColor="#336566" layoutX="200.0" layoutY="237.0" prefHeight="30.0" prefWidth="200.0" promptText="Wachtwoord" unFocusColor="#848484" />
+      <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="212.0" layoutY="301.0" prefHeight="30.0" prefWidth="175.0" style="-fx-background-color: #336566;" text="Inloggen" textAlignment="CENTER" textFill="WHITE">
+      </JFXButton>
    </children>
 </fx:root>
