--- a/Taijitan/src/gui/Login.fxml
+++ b/Taijitan/src/gui/Login.fxml
@@ -9,13 +9,13 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="136.0" fitWidth="134.0" layoutX="233.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="136.0" fitWidth="134.0" layoutX="233.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/img/logo.png" />
          </image>
       </ImageView>
-      <JFXPasswordField fx:id="txtEmail" alignment="CENTER" focusColor="#336566" layoutX="200.0" layoutY="185.0" prefHeight="30.0" prefWidth="200.0" promptText="E-mailadres" unFocusColor="#848484" />
-      <JFXTextField fx:id="txtPassword" alignment="CENTER" focusColor="#336566" layoutX="200.0" layoutY="237.0" prefHeight="30.0" prefWidth="200.0" promptText="Wachtwoord" unFocusColor="#848484" />
+      <JFXTextField fx:id="txtPassword" accessibleRole="PASSWORD_FIELD" alignment="CENTER" focusColor="#336566" layoutX="200.0" layoutY="185.0" prefHeight="30.0" prefWidth="200.0" promptText="E-mailadress" unFocusColor="#848484" />
+      <JFXPasswordField fx:id="txtEmail" alignment="CENTER" focusColor="#336566" layoutX="200.0" layoutY="231.0" prefHeight="30.0" prefWidth="200.0" promptText="Wachtwoord" unFocusColor="#848484" />
       <JFXButton fx:id="btnLogin" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="212.0" layoutY="301.0" onAction="#login" prefHeight="30.0" prefWidth="175.0" style="-fx-background-color: #336566;" text="Inloggen" textAlignment="CENTER" textFill="WHITE">
       </JFXButton>
    </children>
