--- a/Taijitan/src/gui/Presents.fxml
+++ b/Taijitan/src/gui/Presents.fxml
@@ -5,27 +5,27 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root prefHeight="540.0" prefWidth="1017.0" style="-fx-background-color: white;" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="540.0" prefWidth="1400.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXListView fx:id="lstSessions" layoutX="14.0" layoutY="139.0" prefHeight="374.0" prefWidth="348.0" />
-      <Label layoutX="182.0" layoutY="14.0" text="Aanwezigheden" textAlignment="CENTER" textFill="#336566">
+      <JFXListView fx:id="lstSessions" layoutX="140.0" layoutY="135.0" prefHeight="374.0" prefWidth="501.0" />
+      <Label layoutX="504.0" layoutY="14.0" text="Aanwezigheden" textAlignment="CENTER" textFill="#336566">
          <font>
             <Font name="System Bold" size="48.0" />
          </font>
       </Label>
-      <Label layoutX="148.0" layoutY="95.0" prefHeight="38.0" prefWidth="80.0" text="Sessies" textAlignment="CENTER" textFill="#336566">
+      <Label layoutX="347.0" layoutY="92.0" prefHeight="38.0" prefWidth="80.0" text="Sessies" textAlignment="CENTER" textFill="#336566">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="501.0" layoutY="95.0" prefHeight="38.0" prefWidth="80.0" text="Details" textAlignment="CENTER" textFill="#336566">
+      <Label layoutX="990.0" layoutY="76.0" prefHeight="38.0" prefWidth="80.0" text="Details" textAlignment="CENTER" textFill="#336566">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label fx:id="lblTeacher" layoutX="393.0" layoutY="152.0" text="Lesgever:" />
-      <Label fx:id="lblDate" layoutX="393.0" layoutY="169.0" text="Datum:" />
-      <Label layoutX="393.0" layoutY="200.0" text="Aanwezigen:" />
-      <JFXListView fx:id="lstPressents" layoutX="392.0" layoutY="218.0" prefHeight="294.0" prefWidth="602.0" />
+      <Label fx:id="lblTeacher" layoutX="779.0" layoutY="133.0" text="Lesgever:" />
+      <Label fx:id="lblDate" layoutX="778.0" layoutY="153.0" text="Datum:" />
+      <Label layoutX="778.0" layoutY="191.0" text="Aanwezigen:" />
+      <JFXListView fx:id="lstPressents" layoutX="778.0" layoutY="210.0" prefHeight="294.0" prefWidth="553.0" />
    </children>
 </fx:root>
