--- a/Taijitan/src/gui/Members.fxml
+++ b/Taijitan/src/gui/Members.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1141.0" type="BorderPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1141.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MembersController">
    <top>
       <Label alignment="CENTER" contentDisplay="CENTER" text="Leden" textFill="#336566" BorderPane.alignment="CENTER">
          <font>
@@ -63,7 +63,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXTextField fx:id="txtFirstName" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <JFXTextField fx:id="txtFirstName" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </GridPane.margin>
@@ -71,7 +71,7 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="txtLastName" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <JFXTextField fx:id="txtLastName" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </GridPane.margin>
@@ -127,7 +127,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Label>
-            <JFXTextField fx:id="txtBirthPlace" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="3">
+            <JFXTextField fx:id="txtBirthPlace" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -151,7 +151,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Label>
-            <JFXTextField fx:id="txtPersonalNationalNumber" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="4">
+            <JFXTextField fx:id="txtPersonalNationalNumber" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="4">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -167,12 +167,12 @@
                   <Insets />
                </GridPane.margin>
             </Label>
-            <JFXTextField fx:id="txtStreet" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <JFXTextField fx:id="txtStreet" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="txtPostalCode" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <JFXTextField fx:id="txtPostalCode" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="8">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -185,32 +185,32 @@
                   <Insets />
                </GridPane.margin>
             </Label>
-            <JFXTextField fx:id="txtEmail" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="12">
+            <JFXTextField fx:id="txtEmail" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="12">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="txtLandLineNumber" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="13">
+            <JFXTextField fx:id="txtLandLineNumber" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="13">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="txtHouseNumber" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="7">
+            <JFXTextField fx:id="txtHouseNumber" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="7">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="txtCityName" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="8">
+            <JFXTextField fx:id="txtCityName" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="8">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="txtPhoneNumber" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="12">
+            <JFXTextField fx:id="txtPhoneNumber" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="12">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="txtMailParent" alignment="TOP_LEFT" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="13">
+            <JFXTextField fx:id="txtMailParent" alignment="TOP_LEFT" disable="true" focusColor="#336566" style="-fx-text-fill: #336566;" GridPane.columnIndex="3" GridPane.rowIndex="13">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -292,16 +292,32 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <JFXComboBox fx:id="cmbGender" focusColor="#336566" prefHeight="30.0" prefWidth="303.0" style="-fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <JFXComboBox fx:id="cmbNationality" focusColor="#336566" prefHeight="30.0" prefWidth="282.0" style="-fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <JFXComboBox fx:id="cmbCountry" focusColor="#336566" prefHeight="30.0" prefWidth="326.0" style="-fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-            <JFXDatePicker fx:id="dpBirthDate" defaultColor="#336566" prefHeight="28.0" prefWidth="514.0" style="-fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <JFXComboBox fx:id="cmbGender" disable="true" focusColor="#336566" prefHeight="30.0" prefWidth="303.0" style="-fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <JFXComboBox fx:id="cmbNationality" disable="true" focusColor="#336566" prefHeight="30.0" prefWidth="282.0" style="-fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <JFXComboBox fx:id="cmbCountry" disable="true" focusColor="#336566" prefHeight="30.0" prefWidth="326.0" style="-fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <JFXDatePicker fx:id="dpBirthDate" defaultColor="#336566" disable="true" prefHeight="28.0" prefWidth="514.0" style="-fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label fx:id="lblDateRegistered" prefHeight="93.0" prefWidth="190.0" textAlignment="CENTER" textFill="#336566" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXButton alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onMouseClicked="#edit" prefHeight="34.0" prefWidth="183.0" style="-fx-background-color: #336566;" text="Pas gegevens aan" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="15">
+            <JFXButton fx:id="btnEdit" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" disable="true" onMouseClicked="#edit" prefHeight="34.0" prefWidth="183.0" style="-fx-background-color: #336566;" text="Pas gegevens aan" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="15">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </GridPane.margin>
+            </JFXButton>
+            <JFXButton fx:id="btnDelete" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" disable="true" onMouseClicked="#delete" prefHeight="34.0" prefWidth="183.0" style="-fx-background-color: #336566;" text="Verwijder lid" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" GridPane.columnIndex="2" GridPane.rowIndex="15">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </GridPane.margin>
+            </JFXButton>
+            <JFXButton fx:id="btnAdd" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" disable="true" prefHeight="33.0" prefWidth="15.0" style="-fx-background-color: #336566;" text="+" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" GridPane.rowIndex="15">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -318,4 +334,4 @@
          </padding>
       </GridPane>
    </center>
-</fx:root>
+</BorderPane>
