--- a/Taijitan/src/gui/_OverviewRegisteredUsers.fxml
+++ b/Taijitan/src/gui/_OverviewRegisteredUsers.fxml
@@ -1,21 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.VBox?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1400.0" type="VBox" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="1400.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Geregistreerde leden" />
-      <TableView fx:id="tblRegistredUsers" prefHeight="200.0" prefWidth="200.0">
-        <columns>
-          <TableColumn fx:id="colFamilyName" prefWidth="75.0" text="Familienaam" />
-          <TableColumn fx:id="colFirstName" prefWidth="158.83641815185547" text="Voornaam" />
-            <TableColumn fx:id="colDateOfBirth" prefWidth="144.0" text="Geboortedatum" />
-            <TableColumn fx:id="colTelephone" prefWidth="249.599853515625" text="Telefoonnummer" />
-            <TableColumn fx:id="colEmail" prefWidth="129.1636962890625" text="Email" />
-        </columns>
-      </TableView>
+      <JFXTreeTableView fx:id="tblRegistredUsers" layoutX="119.0" layoutY="13.0" prefHeight="500.0" prefWidth="1165.0" stylesheets="@style.css" />
    </children>
 </fx:root>
