--- a/Taijitan/src/gui/Nav.fxml
+++ b/Taijitan/src/gui/Nav.fxml
@@ -1,72 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.geometry.Insets?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
-<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="764.0" prefWidth="270.0" type="VBox" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ImageView fitHeight="203.0" fitWidth="214.0" onMouseClicked="#loadWelcome" pickOnBounds="true" preserveRatio="true" VBox.vgrow="ALWAYS">
-         <image>
-            <Image url="@../assets/img/logo.png" />
-         </image>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" />
-         </VBox.margin>
-      </ImageView>
-      <JFXButton fx:id="btnMembers" alignment="CENTER" buttonType="RAISED" onAction="#loadMembers" prefHeight="50.0" prefWidth="207.0" style="-fx-background-color: #336566;" text="Leden" textFill="WHITE" VBox.vgrow="ALWAYS">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-      </JFXButton>
-      <JFXButton fx:id="btnActivities" alignment="CENTER" buttonType="RAISED" onAction="#loadActivities" prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="Activiteiten" textFill="WHITE" VBox.vgrow="ALWAYS">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-      </JFXButton>
-      <JFXButton fx:id="btnCourseMaterial" alignment="CENTER" buttonType="RAISED" onAction="#loadCourseMaterial" prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="Lesmateriaal" textFill="WHITE" VBox.vgrow="ALWAYS">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-      </JFXButton>
-      <JFXButton fx:id="btnLeaderBoard" alignment="CENTER" buttonType="RAISED" onAction="#loadLeaderBoard" prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="Scorebord" textFill="WHITE" VBox.vgrow="ALWAYS">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-      </JFXButton>
-      <JFXButton fx:id="btnOverviews" alignment="CENTER" buttonType="RAISED" onAction="#loadOverviews" prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="Overzichten" textFill="WHITE" VBox.vgrow="ALWAYS">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-      </JFXButton>
-      <ImageView fitHeight="46.0" fitWidth="145.0" nodeOrientation="INHERIT" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/img/exit.png" />
-         </image>
-         <VBox.margin>
-            <Insets left="85.0" right="85.0" top="150.0" />
-         </VBox.margin>
-      </ImageView>
-   </children>
-   <padding>
-      <Insets bottom="15.0" left="30.0" right="15.0" top="40.0" />
-   </padding>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="764.0" prefWidth="270.0"
+         type="VBox" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <ImageView fitHeight="203.0" fitWidth="214.0" onMouseClicked="#loadWelcome" pickOnBounds="true"
+                   preserveRatio="true" VBox.vgrow="ALWAYS">
+            <image>
+                <Image url="@../assets/img/logo.png"/>
+            </image>
+            <VBox.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0"/>
+            </VBox.margin>
+        </ImageView>
+        <JFXButton fx:id="btnMembers" alignment="CENTER" buttonType="RAISED" onAction="#loadMembers" prefHeight="50.0"
+                   prefWidth="207.0" style="-fx-background-color: #336566;" text="Leden" textFill="WHITE"
+                   VBox.vgrow="ALWAYS">
+            <font>
+                <Font name="Arial Bold" size="24.0"/>
+            </font>
+            <VBox.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </VBox.margin>
+        </JFXButton>
+        <JFXButton fx:id="btnActivities" alignment="CENTER" buttonType="RAISED" onAction="#loadActivities"
+                   prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="Activiteiten"
+                   textFill="WHITE" VBox.vgrow="ALWAYS">
+            <font>
+                <Font name="Arial Bold" size="24.0"/>
+            </font>
+            <VBox.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </VBox.margin>
+        </JFXButton>
+        <JFXButton fx:id="btnCourseMaterial" alignment="CENTER" buttonType="RAISED" onAction="#loadCourseMaterial"
+                   prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="Lesmateriaal"
+                   textFill="WHITE" VBox.vgrow="ALWAYS">
+            <font>
+                <Font name="Arial Bold" size="24.0"/>
+            </font>
+            <VBox.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </VBox.margin>
+        </JFXButton>
+        <JFXButton fx:id="btnLeaderBoard" alignment="CENTER" buttonType="RAISED" onAction="#loadLeaderBoard"
+                   prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="Scorebord"
+                   textFill="WHITE" VBox.vgrow="ALWAYS">
+            <font>
+                <Font name="Arial Bold" size="24.0"/>
+            </font>
+            <VBox.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </VBox.margin>
+        </JFXButton>
+        <JFXButton fx:id="btnOverviews" alignment="CENTER" buttonType="RAISED" onAction="#loadOverviews"
+                   prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="Overzichten"
+                   textFill="WHITE" VBox.vgrow="ALWAYS">
+            <font>
+                <Font name="Arial Bold" size="24.0"/>
+            </font>
+            <VBox.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </VBox.margin>
+        </JFXButton>
+        <ImageView fitHeight="46.0" fitWidth="145.0" nodeOrientation="INHERIT" onMouseClicked="#exit"
+                   pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../assets/img/exit.png"/>
+            </image>
+            <VBox.margin>
+                <Insets left="85.0" right="85.0" top="150.0"/>
+            </VBox.margin>
+        </ImageView>
+    </children>
+    <padding>
+        <Insets bottom="15.0" left="30.0" right="15.0" top="40.0"/>
+    </padding>
 </fx:root>
