--- a/Taijitan/src/gui/_OverviewRegisteredUsers.fxml
+++ b/Taijitan/src/gui/_OverviewRegisteredUsers.fxml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1400.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXTreeTableView fx:id="tblRegistredUsers" layoutX="117.0" layoutY="123.0" prefHeight="500.0" prefWidth="1165.0" stylesheets="@style.css" />
+      <JFXTreeTableView fx:id="tblRegistredUsers" layoutX="117.0" layoutY="123.0" prefHeight="476.0" prefWidth="1165.0" stylesheets="@style.css" />
       <JFXTextField fx:id="txtSearch" layoutX="117.0" layoutY="65.0" prefHeight="27.0" prefWidth="454.0" promptText="Zoeken (op naam, voornaam of telefoonnummer)" />
+      <JFXButton fx:id="btnPrint" alignment="CENTER" buttonType="RAISED" layoutX="119.0" layoutY="623.0" onAction="#printOverview" prefHeight="50.0" prefWidth="297.0" style="-fx-background-color: #336566;" text="PRINT" textFill="WHITE">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </JFXButton>
    </children>
 </fx:root>
