--- a/Taijitan/src/gui/_OverviewPresents.fxml
+++ b/Taijitan/src/gui/_OverviewPresents.fxml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXListView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="1400.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="1221.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <JFXListView fx:id="lstSessions" layoutX="140.0" layoutY="135.0" prefHeight="460.0" prefWidth="503.0" />
-        <Label layoutX="504.0" layoutY="14.0" text="Aanwezigheden" textAlignment="CENTER" textFill="#336566">
+        <JFXListView fx:id="lstSessions" layoutX="72.0" layoutY="120.0" prefHeight="460.0" prefWidth="503.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="431.0" layoutY="14.0" text="Aanwezigheden" textAlignment="CENTER" textFill="#336566">
             <font>
                 <Font name="System Bold" size="48.0" />
             </font>
         </Label>
-        <Label layoutX="347.0" layoutY="92.0" prefHeight="38.0" prefWidth="80.0" text="Sessies" textAlignment="CENTER" textFill="#336566">
+        <Label layoutX="284.0" layoutY="75.0" prefHeight="38.0" prefWidth="80.0" text="Sessies" textAlignment="CENTER" textFill="#336566">
             <font>
                 <Font name="System Bold" size="24.0" />
             </font>
         </Label>
-        <Label layoutX="990.0" layoutY="76.0" prefHeight="38.0" prefWidth="80.0" text="Details" textAlignment="CENTER" textFill="#336566">
+        <Label layoutX="878.0" layoutY="75.0" prefHeight="38.0" prefWidth="80.0" text="Details" textAlignment="CENTER" textFill="#336566">
             <font>
                 <Font name="System Bold" size="24.0" />
             </font>
         </Label>
-        <Label fx:id="lblTeacher" layoutX="779.0" layoutY="133.0" text="Lesgever:" />
-        <Label fx:id="lblDate" layoutX="778.0" layoutY="153.0" text="Datum:" />
-        <Label layoutX="778.0" layoutY="191.0" text="Aanwezigen:" />
-        <JFXListView fx:id="lstPressents" layoutX="778.0" layoutY="210.0" prefHeight="387.0" prefWidth="553.0" />
+        <Label fx:id="lblTeacher" layoutX="666.0" layoutY="120.0" text="Lesgever:" />
+        <Label fx:id="lblDate" layoutX="666.0" layoutY="141.0" text="Datum:" />
+        <Label layoutX="666.0" layoutY="174.0" text="Aanwezigen:" />
+        <JFXListView fx:id="lstPressents" layoutX="666.0" layoutY="192.0" prefHeight="387.0" prefWidth="503.0" />
     </children>
+   <padding>
+      <Insets left="50.0" />
+   </padding>
 </fx:root>
