--- a/Taijitan/src/gui/Activities.fxml
+++ b/Taijitan/src/gui/Activities.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXListView?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1041.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="758.0" prefWidth="1041.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="56.0" layoutY="31.0" prefHeight="654.0" prefWidth="929.0" spacing="30.0">
          <children>
@@ -40,7 +41,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="txtName" alignment="TOP_LEFT" disable="true" focusColor="#336566" prefHeight="30.0" prefWidth="157.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1">
+                  <JFXTextField fx:id="txtName" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="157.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -80,7 +81,7 @@
                 <RowConstraints maxHeight="278.2181829783542" minHeight="10.0" prefHeight="278.2181829783542" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <JFXListView fx:id="lstMembers" onMouseClicked="#mouseClicked" prefHeight="278.0" prefWidth="477.0" GridPane.rowIndex="1">
+                  <JFXListView fx:id="lstMembers" onMouseClicked="#toConfirmed" prefHeight="278.0" prefWidth="477.0" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="50.0" right="50.0" />
                      </GridPane.margin>
@@ -90,7 +91,7 @@
                         <Font size="13.0" />
                      </font>
                   </Label>
-                  <JFXListView fx:id="lstConfirmed" prefHeight="24.0" prefWidth="324.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <JFXListView fx:id="lstConfirmed" onMouseClicked="#toMember" prefHeight="24.0" prefWidth="324.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="50.0" right="50.0" />
                      </GridPane.margin>
@@ -104,5 +105,10 @@
             </GridPane>
          </children>
       </VBox>
+      <JFXButton fx:id="btnAdd" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="454.0" layoutY="714.0" onAction="#addActivity" style="-fx-background-color: #336566;" text="Voeg Activiteit toe" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
    </children>
 </fx:root>
