Adding images to coursematerial

--- a/Taijitan/src/gui/CourseMaterial.fxml
+++ b/Taijitan/src/gui/CourseMaterial.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="872.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="872.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="56.0" layoutY="31.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="711.0" prefWidth="783.0" spacing="30.0">
          <children>
@@ -80,6 +80,16 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </JFXTextArea>
+                  <JFXTextField fx:id="txfImages" prefHeight="25.0" prefWidth="177.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets right="200.0" />
+                     </GridPane.margin>
+                  </JFXTextField>
+                  <JFXButton fx:id="btnImages" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" disable="true" onMouseClicked="#selectImages" prefHeight="30.0" prefWidth="161.0" style="-fx-background-color: #336566;" text="Voeg afbeeldingen toe" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </JFXButton>
                </children>
             </GridPane>
          </children>
