fixed multiple bugs

--- a/Taijitan/src/gui/CourseMaterial.fxml
+++ b/Taijitan/src/gui/CourseMaterial.fxml
@@ -65,7 +65,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Afbeeldingen*" GridPane.rowIndex="6">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Afbeeldingen" GridPane.rowIndex="6">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
